--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -33,3 +33,13 @@ a,
     padding: 0 2rem;
   }
 }
+
+html,
+body,
+#app {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
